<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">指尖填图</string>
    <string name="action_settings">更多功能</string>
    <string name="action_about">关于</string>
    <string name="grabdata">读取数据中...</string>
    <string name="loadpicture">载入模板中</string>
    <string name="loadpicturefailed">加载模板失败请重试</string>
    <string name="advance">更多</string>
    <string name="undo">撤销</string>
    <string name="redo">重复</string>
    <string name="save">保存</string>
    <string name="share">分享</string>
    <string name="savingimage">正在保存到本地</string>
    <string name="saveFailed">保存失败</string>
    <string name="saveSuccess">您的大作已经保存到：</string>
    <string name="sharecontent">我在玩【颜色集-指尖填图】,快和我一起来玩吧！下载地址：http://app.mi.com/details?id=com.ue.colorful</string>
    <string name="pleaseselect">请选择</string>
    <string name="sharemywork">快来看看我的新作。</string>
    <string name="open">读取</string>
    <string name="openfailed">快动动手指先创作一幅吧！</string>
    <string name="ok">确定</string>
    <string name="quitorsave">离开前，需要保存当前作品吗？</string>
    <string name="quit">不用</string>
    <string name="opensuccess">已为您打开保存的作品，可以继续创作啦！\n点击撤销可以返回原先的图片！</string>
    <string name="undostacksize">撤销步数</string>
    <string name="loadfailed">加载数据失败</string>
    <string name="clearcache">清除全部已下载的图片\n您的作品不会删除</string>
    <string name="clearcachesuccess">清除成功</string>
    <string name="themelist">主题列表</string>
    <string name="pleasepressexit">再按一次退出</string>
    <string name="nomoredata">全部加载完成</string>
    <string name="loading">加载中...</string>
    <string name="secretGarden">秘密花园</string>
    <string name="paintHint">1、选中喜欢的颜色轻触图片空白区域即可\n2、双指可放大缩小图片\n3、左下角可以保存八个喜欢的颜料</string>
    <string name="paintHint2">打开已经保存的图片后，按撤消即可返回原图，重新做图！\n快来试试吧！</string>
    <string name="my_works">指尖作品</string>
    <string name="addtext">文字</string>
    <string name="delete">删除</string>
    <string name="repaint">删除作品</string>
    <string name="confirmRepaint">重画会删除已保存的作品，确定重新涂色吗？</string>
    <string name="cancel">取消</string>
    <string name="addeditwords_hint">写些祝福语吧</string>
    <string name="textsize">字体大小</string>
    <string name="small">小</string>
    <string name="middle">中</string>
    <string name="large">大</string>
    <string name="huge">巨大</string>
    <string name="textcolor">字体颜色</string>
    <string name="nowords">先写什么吧</string>
    <string name="addborder">相框</string>
    <string name="nopaint">怎么都找不到想要的数据啦！</string>
    <string name="deletePaintFailed">删除作品失败</string>
    <string name="deleteAllPaints">删除所有作品</string>
    <string name="confirmDeleteAllPaints">确认删除所有您的作品吗？删除后无法找回的哦！</string>
    <string name="deleteAllPaintsSuccess">所有作品删除完成！</string>
    <string name="lastModifty">最后修改时间 %s</string>
    <string name="pickcolor">取色</string>
    <string name="pickcolorhint">轻触图中想要取色的位置，完成取色</string>
    <string name="pickcolorerror">请轻触正确的颜色位置</string>
    <string name="drawLine">补线</string>
    <string name="drawLineHint">请轻触图片设置起始点</string>
    <string name="drawLineHint_second">请轻触图片设置终点</string>
    <string name="drawLineHint_finish">请轻触有效的图片区域</string>
    <string name="allPicture">缓存模板</string>
    <string name="dontshownexttime">下次不再显示</string>
    <string name="buxianfunction">补线功能介绍</string>
    <string name="buxianfunctionhint">现在可以自己在图中自由的画线，然后填色啦！\n首先，点击图片任意位置，设定线起始点。</string>
    <string name="buxianfirstpointsethint">现在，请再在图中选取一个点，设定线的结束位置，系统将自动完成连线。</string>
    <string name="buxiannextpointsethint">继续点击图中任意位置，将继续连线！撤销按钮可擦除上一条连线。</string>
    <string name="gradualModelHint">渐变颜色后不能覆盖成其他颜色，如要修改请先撤销！</string>
    <string name="jianbian_color">渐变色</string>
    <string name="normal_color">正常色</string>
    <string name="gradualModel">渐变功能</string>
    <string name="help">帮助</string>
    <string name="after_effect">特效</string>
    <string name="palette">色板</string>
    <string name="delete_completed">已删除保存的作品</string>
    <string name="effect_hint">添加特效后会清除原来的操作记录，建议在完成作品后再添加特效内容</string>
    <string name="go_on">继续</string>
    <string name="cancel_not_alert">取消并不再提醒</string>
    <string name="got_it">知道了</string>
    <string name="finger_coloring">指尖填图</string>
    <string name="is_exit">确定退出吗?</string>
    <string name="save_exit">保存并退出</string>
    <string name="quit_exit">不保存并退出</string>
    <string name="no_external_permission">读取文件失败：应用没有被授予外部存储权限</string>
    <string name="read_data_error">读取数据出错:%s</string>
</resources>
